--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <h1>my first ever website  </h1>
     <h2>my website</h2>
     <h1>amar sonar bangla</h1>
-    <h1>ami tomai valobashi<\h1>
-
+    <h1>ami tomai valobashi</h1>
+    <input type="text">
+    <br>
+    <button>click me</button>
 </body>
 </html>
